--- a/style.css
+++ b/style.css
@@ -7,3 +7,21 @@ html {
 body {
     margin: 0%;
 }
+
+header {
+    background-color: blue;
+    padding: 60px 40px;
+    text-align: center;
+    color: white;
+}
+
+header h1 {
+    font-size: 2.5rem;
+    font-weight: 800;
+    margin-bottom: 0.2rem;
+}
+
+header h2 {
+    font-size: 1.5rem;
+    font-weight: 400;
+}
